syntax = "proto3";

package com.road.yishi.proto.pet;

message PetInfoMsg {
  int32 petId = 1;
  int32 templateId = 2;
  string petName = 3;
  int32 curGp = 4;
  int32 curGrade = 5;
  int32 power = 6;
  int32 intel = 7;
  int32 physi = 8;
  int32 armor = 9;
  int32 remainPoints = 10;
  int32 addPowerApti = 11;
  int32 addIntelApti = 12;
  int32 addPhysiApti = 13;
  int32 addArmorApti = 14;
  int32 powerApti = 15;
  int32 intelApti = 16;
  int32 physiApti = 17;
  int32 armorApti = 18;
  int32 curQualityGp = 19;
  int32 growthRate = 20;
  int32 maxHp = 21;
  int32 fireResi = 22;
  int32 waterResi = 23;
  int32 electResi = 24;
  int32 windResi = 25;
  int32 darkResi = 26;
  int32 lightResi = 27;
  string followSkills = 28;
  string changeSkills = 29;
  bool isFight = 30;
  bool isPractice = 31;
  bool isBind = 32;
  string totalGp = 33;
  int32 fightingCapacity = 34;
  bool isDel = 35;
  int32 quality = 36;
  bool isGuard = 37;
  string chaSkillIndexs = 38;
  string fastKey = 39;
  int32 initQuality = 40;
  bool isLocked = 41;
  int32 bagAttack = 42;
  int32 bagDefence = 43;
  int32 bagMagicattack = 44;
  int32 bagMagicdefence = 45;
  int32 bagLiving = 46;
  string remotePetSkillIndexs = 47;
  int32 remoteHp = 48;
  bool isRemote = 49;
  bool remoteDie = 50;
  int32 skillIndex = 51;
  bool isActiveSecond = 52;
  int32 totalQualityGp = 53;
  int32 atkpotential = 54;
  int32 matpotential = 55;
  int32 defpotential = 56;
  int32 mdfpotential = 57;
  int32 hppotential = 58;
  int32 atkpotentialAtr = 59;
  int32 matpotentialAtr = 60;
  int32 defpotentialAtr = 61;
  int32 mdfpotentialAtr = 62;
  int32 hppotentialAtr = 63;
  int32 atkbeneAtr = 64;
  int32 matbeneAtr = 65;
  int32 defbeneAtr = 66;
  int32 mdfbeneAtr = 67;
  int32 hpbeneAtr = 68;
}
