syntax = "proto3";

package com.road.yishi.proto.remotepet;

message RemoteFriendPetOpMsg {
  int32 op = 1;
  int32 friendId = 2;
  int32 petId = 3;
}
